cmake_minimum_required(VERSION 3.14.0)
project(RakNet VERSION 0.0.1)

add_library(RakNet STATIC 
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/Base64Encoder.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/BitStream.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/CCRakNetSlidingWindow.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/CCRakNetUDT.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/CheckSum.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/CloudClient.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/CloudCommon.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/CloudServer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/CommandParserInterface.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/ConnectionGraph2.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/ConsoleServer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DataCompressor.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DirectoryDeltaTransfer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DR_SHA1.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DS_BytePool.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DS_ByteQueue.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DS_HuffmanEncodingTree.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DS_Table.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/DynDNS.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/EmailSender.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/EpochTimeToString.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/FileList.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/FileListTransfer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/FileOperations.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/FormatString.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/FullyConnectedMesh2.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/Getche.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/Gets.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/GetTime.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/gettimeofday.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/GridSectorizer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/HTTPConnection.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/HTTPConnection2.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/IncrementalReadInterface.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/Itoa.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/LinuxStrings.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/LocklessTypes.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/LogCommandParser.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/MessageFilter.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/NatPunchthroughClient.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/NatPunchthroughServer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/NatTypeDetectionClient.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/NatTypeDetectionCommon.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/NatTypeDetectionServer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/NetworkIDManager.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/NetworkIDObject.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/PacketConsoleLogger.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/PacketFileLogger.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/PacketizedTCP.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/PacketLogger.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/PacketOutputWindowLogger.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/PluginInterface2.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/PS4Includes.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/Rackspace.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakMemoryOverride.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetCommandParser.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_360_720.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_Berkley.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_Berkley_NativeClient.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_NativeClient.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_PS3_PS4.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_PS4.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_Vita.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_WindowsStore8.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_Windows_Linux.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetSocket2_Windows_Linux_360.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetStatistics.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetTransport2.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakNetTypes.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakPeer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakSleep.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakString.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakThread.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RakWString.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/Rand.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RandSync.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/ReadyEvent.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RelayPlugin.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/ReliabilityLayer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/ReplicaManager3.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/Router2.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/RPC4Plugin.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/SecureHandshake.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/SendToThread.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/SignaledEvent.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/SimpleMutex.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/SocketLayer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/StatisticsHistory.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/StringCompressor.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/StringTable.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/SuperFastHash.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/TableSerializer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/TCPInterface.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/TeamBalancer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/TeamManager.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/TelnetTransport.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/ThreadsafePacketLogger.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/TwoWayAuthentication.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/UDPForwarder.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/UDPProxyClient.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/UDPProxyCoordinator.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/UDPProxyServer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/VariableDeltaSerializer.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/VariableListDeltaTracker.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/VariadicSQLParser.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/VitaIncludes.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/WSAStartupSingleton.cpp
	${CMAKE_CURRENT_LIST_DIR}/RakNet/Source/_FindFirst.cpp
	)